Added Index route. Added Dockerfile and Makefile
